src/test/resources/test_data/error/invokeFunNotFunction.smtx
main module invokeFunNotFunction {
    @invokefun(1, 2);
}